# vallm

./: .env.example  .gitignore  .pre-commit-config.yaml  .pre-commit-hooks.yaml  .vallmignore  CHANGELOG.md  CONTRIBUTING.md  Dockerfile.test  MCP_INTEGRATION_SUMMARY.md  Makefile  README.md  SUMD.md  SUMR.md  TODO.md  Taskfile.yml  app.doql.css  app.doql.less  cycle_test.txt  cycle_test_1776000844.txt  cycle_test_1776000893.txt  cycle_test_1776000941.txt  cycle_test_1776004364.txt  cycle_test_1776005255.txt  goal.yaml  index.html  mcp_server.py  planfile.yaml  project.sh  project.toon  pyproject.toml  pyqual.yaml  redsl.yaml  redsl_change_1776004347.txt  redsl_change_1776004821.txt  redsl_refactor_plan.md  redsl_refactor_plan.toon.yaml  redsl_refactor_report.md  redsl_refactor_report.toon.yaml  sumd.json  test_mcp.py  (+1 more)
.github/workflows/: ci.yml  comprehensive-tests.yml  publish.yml
.pyqual/: coverage.json  llx_history.jsonl  report.md  ruff.json
.taskill/: state.json
.vallm/: ast_comparison_summary.json  graph_analysis_summary.json  multilang_summary.json  security_check_summary.json
TODO/: 1.md
backend/routers/tickets/: __init__.py  crud.py  models.py  redsl.py  webhook.py
code2llm_output/: README.md  analysis.toon  context.md
docs/: README.md  TESTING.md
examples/: 01_basic_validation.py  02_ast_comparison.py  03_security_check.py  04_graph_analysis.py  05_llm_semantic_review.py  README.md  __init__.py  mcp_demo.py  run.sh
examples/01_basic_validation/: README.md  main.py
examples/01_basic_validation/.vallm/: basic_validation_summary.json
examples/02_ast_comparison/: README.md  main.py
examples/03_security_check/: README.md  main.py
examples/04_graph_analysis/: README.md  main.py
examples/05_llm_semantic_review/: README.md  main.py  main_template.py
examples/06_multilang_validation/: README.md  main.py  main_template.py
examples/07_multi_language/: README.md  main.py
examples/08_code2llm_integration/: README.md  main.py
examples/08_code2llm_integration/.vallm/: code2llm_integration_report.json
examples/09_code2logic_integration/: README.md  main.py
examples/09_code2logic_integration/.vallm/: code2logic_integration_report.json
examples/10_mcp_ollama_demo/: Dockerfile  README.md  docker-entrypoint.sh  mcp_demo.py  refactored_output.py  requirements.txt  run.sh
examples/10_mcp_ollama_demo/legacy_code/: order_processor.py
examples/11_claude_code_autonomous/: Dockerfile  README.md  claude_autonomous_demo.py  docker-entrypoint.sh  requirements.txt  run.sh
examples/11_claude_code_autonomous/legacy_code/: data_processor.py
examples/12_ollama_simple_demo/: Dockerfile  best_version.py  docker-entrypoint.sh  iteration_1.py  iteration_2.py  ollama_simple_demo.py  run.sh
examples/12_ollama_simple_demo/legacy_code/: simple_buggy.py
examples/12_ollama_simple_demo/utils/: __init__.py  calculate_total.py  load_config.py  main.py  process_user_input.py  save_data.py
examples/13_batch_processing/: README.md  main.py
examples/13_batch_processing/.vallm/: batch_processing_summary.json
examples/14_api_advanced/: README.md  main.py
examples/14_api_advanced/.vallm/: api_advanced_summary.json
examples/15_cli_usage/: README.md  main.py
examples/16_configuration/: README.md  main.py
examples/cycle-test/: README.md  full-cycle.sh  validate-steps.sh
examples/utils/: __init__.py  extract_code_from_response.py  extraction.py  logging_utils.py  save_analysis_data.py  validation_runner.py
frontend/e2e/: gui-login-enhanced.spec.js  loginTestHelpers.js
frontend/src/components/: RedslHealthCard.jsx  RedslHealthCard.parts.jsx
frontend/src/hooks/: useRedslHealth.js
mcp/: README.md  __init__.py
mcp/server/: _tools_vallm.py  self_server.py
mcp/tests/: Dockerfile.client  Dockerfile.test  __init__.py  container_e2e.py  docker-compose.yml  quick_test.py  run_e2e.sh  test_client_integration.py  test_e2e.py
project/: README.md  analysis.toon  analysis.toon.yaml  calls.mmd  calls.toon.yaml  calls.yaml  compact_flow.mmd  context.md  dashboard.html  duplication.toon  duplication.toon.toon  duplication.toon.yaml  evolution.toon  evolution.toon.yaml  evolution.yaml  flow.mmd  flow.toon  index.html  map.toon  map.toon.yaml  map.yaml  mermaid.export  planfile-tickets.yaml  project.toon  project.toon.yaml  project.yaml  prompt.txt  toon.toon.yaml  toon.yaml  validation.json  validation.toon  validation.toon.yaml  validation.yaml
project/batch_1/: analysis.toon.yaml  context.md  evolution.toon.yaml
project/root/: analysis.toon.yaml  context.md
project/verify/: validation.toon.yaml
project2/: duplication.toon
scripts/: bump_version.py  test_docker_installation.sh
src/vallm/: __init__.py  __main__.py  cli.py  config.py  hookspecs.py  llm_backend.py  scoring.py
src/vallm/cli/: __init__.py  batch_constants.py  batch_filter.py  batch_process.py  batch_processor.py  batch_processor_files.py  batch_processor_filter.py  batch_processor_impl.py  batch_utils.py  (+6 more)
tests/: conftest.py  mock_llm_provider.py  test_ast_compare.py  test_batch_toon_output.py  test_cli_e2e.py  test_complexity.py  test_examples.py  test_gitignore.py  test_graph.py  test_imports.py  test_installation.py  test_intract.py  test_intract_cli.py  test_languages.py  test_performance.py  test_pipeline.py  test_plugins.py  test_regression_validator.py  test_sandbox.py  test_scoring.py  test_security.py  test_semantic_validation.py  test_syntax.py  test_vallm.py
tests/semantic_validation/: __init__.py  fixtures.py  test_code_quality.py  test_init.py  test_syntax_and_multilang.py
toon/: validation.txt
(+40 files in other folders)
