[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "vallm"
version = "0.1.72"
description = "A complete toolkit for validating LLM-generated code"
readme = "README.md"
license = "Apache-2.0"
requires-python = ">=3.10"
authors = [
    {name = "semcod"},
    {name = "Tom Sapletta", email = "tom@sapletta.com"},
]
keywords = ["llm", "validation", "code-review", "ast", "static-analysis"]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Developers",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Topic :: Software Development :: Quality Assurance",
    "Topic :: Software Development :: Testing",
]
dependencies = [
    "pluggy>=1.6",
    "pydantic>=2.12",
    "pydantic-settings>=2.13",
    "typer>=0.24",
    "rich>=14.3",
    "tree-sitter>=0.25",
    "tree-sitter-language-pack>=1.4",
    "radon>=6.0",
    "lizard>=1.21",
    "pyflakes>=3.4",
]

[project.optional-dependencies]
security = ["bandit>=1.7"]
semantic = [
    "code-bert-score>=0.4",
]
llm = [
    "ollama>=0.4",
    "litellm>=1.0",
]
graph = [
    "networkx>=3.0",
]
docker = ["docker>=6.0"]
all = [
    "vallm[security,semantic,llm,graph,docker]",
]
dev = [
    "pytest>=9.0",
    "pytest-cov>=7.0",
    "ruff>=0.15",
    "tox>=4.0",
    "goal>=2.1.174",
    "costs>=0.1.48",
    "pfix>=0.1.72",
    "pyqual>=0.1.59",
]

[project.scripts]
vallm = "vallm.cli:app"

[project.entry-points."vallm.validators"]
syntax = "vallm.validators.syntax:SyntaxValidator"
imports = "vallm.validators.imports:ImportValidator"
complexity = "vallm.validators.complexity:ComplexityValidator"
security = "vallm.validators.security:SecurityValidator"
semantic = "vallm.validators.semantic:SemanticValidator"

[project.urls]
Homepage = "https://github.com/semcod/vallm"
Repository = "https://github.com/semcod/vallm"

[tool.hatch.build.targets.sdist]
exclude = ["publish-env", "venv", ".venv", ".code2llm_cache", "project", ".idea", ".ruff_cache"]

[tool.hatch.build.targets.wheel]
packages = ["src/vallm"]

[tool.ruff]
target-version = "py310"
line-length = 100

[tool.pytest.ini_options]
testpaths = ["tests"]
addopts = [
    "-v",
    "--strict-markers",
    "--strict-config",
    "--tb=short",
    "-m", "not slow and not integration",
]
markers = [
    "slow: marks tests as slow (deselect with '-m \"not slow\"')",
    "integration: marks tests as integration tests",
    "unit: marks tests as unit tests",
]

[tool.pfix]
# Self-healing Python configuration
model = "openrouter/qwen/qwen3-coder-next"
auto_apply = true
auto_install_deps = true
auto_restart = false
max_retries = 3
create_backups = false
git_auto_commit = false

[tool.pfix.runtime_todo]
enabled = true
todo_file = "TODO.md"
min_severity = "low"
deduplicate = true

[tool.costs]
# AI Cost tracking configuration
badge = true
update_readme = true
readme_path = "README.md"
default_model = "openrouter/qwen/qwen3-coder-next"
analysis_mode = "byok"
full_history = true
max_commits = 500

# Cost thresholds for badge colors (USD)
badge_color_thresholds = { low = 1.0, medium = 5.0, high = 10.0, critical = 50.0 }
